// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftCardList Component should render correctly 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator=""
    textAlign="left"
    variant="h6"
  />
  <Styled(EmptyCard)
    alt="gift card icon"
    icon="gift-card"
    labels={
      Object {
        "giftCardHeading": "heading",
      }
    }
    prefix="GC"
  />
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        className="cardList__ccAddCta"
        dataLocator="payment-addagiftcard"
        fill="BLUE"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  />
</div>
`;

exports[`GiftCardList Component should render correctly if list is present 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator=""
    textAlign="left"
    variant="h6"
  />
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 3,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        className="cardList__ccAddCta"
        dataLocator="payment-addagiftcard"
        fill="BLUE"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      className="cardList__col"
      colSize={
        Object {
          "large": 4,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "large": false,
          "medium": false,
          "small": true,
        }
      }
      key="container-73501"
    >
      <Styled(CardTile)
        card={
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          }
        }
        labels={
          Object {
            "giftCardHeading": "heading",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;
